--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "**/.git": true,
         "**/.DS_Store": true,
         "**/app/*.js": true,
+        "**/app/home/*.js": true,        
         "**/*.map":true
     }, 
     "files.autoSave": "afterDelay"
