--- a/package.json
+++ b/package.json
@@ -14,15 +14,16 @@
   "license": "ISC",
   "dependencies": {
     "angular2": "2.0.0-beta.15",
-    "systemjs": "0.19.26",
+    "body-parser": "^1.15.0",
+    "bootstrap": "^3.3.6",
     "es6-shim": "^0.35.0",
+    "express": "^4.13.4",
+    "font-awesome": "^4.6.1",
+    "mongoose": "^4.4.9",
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.2",
-    "zone.js": "0.6.10",
-    "bootstrap": "^3.3.6",
-    "express": "^4.13.4",
-    "body-parser": "^1.15.0",
-    "mongoose": "^4.4.9"
+    "systemjs": "0.19.26",
+    "zone.js": "0.6.10"
   },
   "devDependencies": {
     "concurrently": "^2.0.0",
