--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.13.4",
     "font-awesome": "^4.6.1",
     "mongoose": "^4.4.9",
+    "passport": "^0.3.2",
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.2",
     "systemjs": "0.19.26",
