--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "angular2": "2.0.0-beta.15",
     "body-parser": "^1.15.0",
     "bootstrap": "^3.3.6",
+    "cookie-parser": "^1.4.1",
     "es6-shim": "^0.35.0",
     "express": "^4.13.4",
+    "express-session": "^1.13.0",
     "font-awesome": "^4.6.1",
     "mongoose": "^4.4.9",
     "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.2",
     "systemjs": "0.19.26",
