--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "gulp-nodemon": "^2.0.6",
     "lite-server": "^2.2.0",
     "typescript": "^1.8.10",
-    "typings": "^0.7.12"
+    "typings": "^0.7.12",
+    "util": "^0.10.3"
   },
   "repository": {}
 }
