add an attribute directive example

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
         "**/app/auth/*.js": true,        
         "**/app/services/*.js": true,
         "**/app/validators/*.js": true,
+        "**/app/attributes/*.js": true,
         "**/app/shared/*.js": true,
         "**/app/game/*.js": true,
         "**/*.map":true
