--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mongoose": "^4.4.9",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
+    "pinjs": "^1.0.1",
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.2",
     "systemjs": "0.19.26",
