--- a/package.json
+++ b/package.json
@@ -13,11 +13,24 @@
   },
   "license": "ISC",
   "dependencies": {
-    "angular2": "2.0.0-beta.17",
+    "@angular/common": "2.0.0-rc.1",
+    "@angular/compiler": "2.0.0-rc.1",
+    "@angular/core": "2.0.0-rc.1",
+    "@angular/http": "2.0.0-rc.1",
+    "@angular/platform-browser": "2.0.0-rc.1",
+    "@angular/platform-browser-dynamic": "2.0.0-rc.1",
+    "@angular/router": "2.0.0-rc.1",
+    "@angular/upgrade": "2.0.0-rc.1",
+    
+    "systemjs": "0.19.27",
+    "es6-shim": "^0.35.0",
+    "reflect-metadata": "^0.1.3",
+    "rxjs": "5.0.0-beta.6",
+    "zone.js": "^0.6.12",
+    
     "body-parser": "^1.15.0",
     "bootstrap": "^3.3.6",
     "cookie-parser": "^1.4.1",
-    "es6-shim": "^0.35.0",
     "express": "^4.13.4",
     "express-session": "^1.13.0",
     "font-awesome": "^4.6.1",
@@ -26,11 +39,7 @@
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "pinjs": "^1.0.1",
-    "reflect-metadata": "0.1.2",
-    "rxjs": "5.0.0-beta.2",
-    "systemjs": "0.19.26",
-    "util": "^0.10.3",
-    "zone.js": "0.6.10"
+    "util": "^0.10.3"
   },
   "devDependencies": {
     "concurrently": "^2.0.0",
@@ -38,7 +47,7 @@
     "gulp-nodemon": "^2.0.6",
     "lite-server": "^2.2.0",
     "typescript": "^1.8.10",
-    "typings": "^0.7.12",
+    "typings": "^0.8.1",
     "xml2js": "^0.4.16"
   },
   "repository": {}
