--- a/package.json
+++ b/package.json
@@ -21,16 +21,11 @@
     "@angular/platform-browser-dynamic": "2.0.0-rc.1",
     "@angular/router": "2.0.0-rc.1",
     "@angular/upgrade": "2.0.0-rc.1",
-    
-    "systemjs": "0.19.27",
-    "es6-shim": "^0.35.0",
-    "reflect-metadata": "^0.1.3",
-    "rxjs": "5.0.0-beta.6",
-    "zone.js": "^0.6.12",
-    
+    "angular2-notifications": "^0.1.52",
     "body-parser": "^1.15.0",
     "bootstrap": "^3.3.6",
     "cookie-parser": "^1.4.1",
+    "es6-shim": "^0.35.0",
     "express": "^4.13.4",
     "express-session": "^1.13.0",
     "font-awesome": "^4.6.1",
@@ -39,7 +34,11 @@
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "pinjs": "^1.0.1",
-    "util": "^0.10.3"
+    "reflect-metadata": "^0.1.3",
+    "rxjs": "5.0.0-beta.6",
+    "systemjs": "0.19.27",
+    "util": "^0.10.3",
+    "zone.js": "^0.6.12"
   },
   "devDependencies": {
     "concurrently": "^2.0.0",
