--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "font-awesome": "^4.6.1",
     "mongodb": "^2.1.18",
     "mongoose": "^4.4.9",
+    "ng2-bs3-modal": "^0.6.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "pinjs": "^1.0.1",
